--- a/ETL_Practice.ipynb
+++ b/ETL_Practice.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "b7577490",
+   "id": "da05d125",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "11772d0d",
+   "id": "6414c0cc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "50efc80f",
+   "id": "c9ee7b01",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "ad5b74cc",
+   "id": "2655adac",
    "metadata": {},
    "outputs": [
     {
@@ -24489,7 +24489,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "400daa7d",
+   "id": "3e32e3ff",
    "metadata": {},
    "outputs": [
     {
@@ -24636,7 +24636,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "9c3a5820",
+   "id": "23d231be",
    "metadata": {},
    "outputs": [
     {
@@ -49090,7 +49090,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "4fcbe5cd",
+   "id": "e4ab8a47",
    "metadata": {},
    "outputs": [
     {
@@ -49221,7 +49221,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "277bd4f9",
+   "id": "52ff7e8b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49232,7 +49232,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "80e3c391",
+   "id": "ee040c8d",
    "metadata": {},
    "outputs": [
     {
@@ -49478,7 +49478,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "fa0323be",
+   "id": "05fbf740",
    "metadata": {},
    "outputs": [
     {
@@ -49502,7 +49502,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "112a019e",
+   "id": "4f2f17bd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49515,7 +49515,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5197863e",
+   "id": "08ed6c3b",
    "metadata": {},
    "outputs": [
     {
@@ -49536,7 +49536,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "df906445",
+   "id": "2253c519",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49548,7 +49548,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "1ef7253c",
+   "id": "05330642",
    "metadata": {},
    "outputs": [
     {
@@ -49697,7 +49697,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "ef2dd53c",
+   "id": "7729a4a5",
    "metadata": {
     "scrolled": true
    },
@@ -49722,7 +49722,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "e27ad046",
+   "id": "5a350ecf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49735,7 +49735,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "ef66ec5a",
+   "id": "ac538186",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49759,7 +49759,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "6d539ac3",
+   "id": "356f9f2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49769,7 +49769,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "f0b75b24",
+   "id": "e15b4f4f",
    "metadata": {},
    "outputs": [
     {
@@ -49846,7 +49846,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "975a68c5",
+   "id": "039bc380",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49858,7 +49858,7 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "9d651000",
+   "id": "a5d7ac0c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49907,7 +49907,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "c24c594c",
+   "id": "3367957b",
    "metadata": {},
    "outputs": [
     {
@@ -49969,7 +49969,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "345a988f",
+   "id": "2848a6cd",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49979,7 +49979,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "a8e347e6",
+   "id": "ecc9dd85",
    "metadata": {},
    "outputs": [
     {
@@ -50229,7 +50229,7 @@
   {
    "cell_type": "code",
    "execution_count": 25,
-   "id": "493b24b6",
+   "id": "9e7d64af",
    "metadata": {},
    "outputs": [
     {
@@ -50290,7 +50290,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "a64e08c0",
+   "id": "7e20b17a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50301,7 +50301,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "4bea09be",
+   "id": "4770bb15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50311,7 +50311,7 @@
   {
    "cell_type": "code",
    "execution_count": 28,
-   "id": "923d1557",
+   "id": "b60dda2b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50322,7 +50322,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "30954adc",
+   "id": "6548fbcf",
    "metadata": {},
    "outputs": [
     {
@@ -50354,7 +50354,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "92249504",
+   "id": "81209919",
    "metadata": {},
    "outputs": [
     {
@@ -50386,7 +50386,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "8ded533f",
+   "id": "25022717",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50396,7 +50396,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "id": "7fc01bf1",
+   "id": "b68899e0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50406,7 +50406,7 @@
   {
    "cell_type": "code",
    "execution_count": 33,
-   "id": "99d40cd1",
+   "id": "477ad864",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50416,7 +50416,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "45f3b9bb",
+   "id": "7cf335cc",
    "metadata": {},
    "outputs": [
     {
@@ -50437,7 +50437,7 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "id": "d25a7885",
+   "id": "bf9b3bb8",
    "metadata": {},
    "outputs": [
     {
@@ -50459,7 +50459,7 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "ee634cea",
+   "id": "ce1c3c0d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50470,7 +50470,7 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "id": "a684be48",
+   "id": "5d321695",
    "metadata": {},
    "outputs": [
     {
@@ -50538,7 +50538,7 @@
   {
    "cell_type": "code",
    "execution_count": 38,
-   "id": "0cf170cb",
+   "id": "ebf42949",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50549,7 +50549,7 @@
   {
    "cell_type": "code",
    "execution_count": 39,
-   "id": "224a6646",
+   "id": "fbb2b30d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50559,7 +50559,7 @@
   {
    "cell_type": "code",
    "execution_count": 40,
-   "id": "502f586d",
+   "id": "e7115359",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50569,7 +50569,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "3fc8eef8",
+   "id": "628da028",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50579,7 +50579,7 @@
   {
    "cell_type": "code",
    "execution_count": 42,
-   "id": "7ffe4843",
+   "id": "6f73659c",
    "metadata": {
     "scrolled": true
    },
@@ -50687,7 +50687,7 @@
   {
    "cell_type": "code",
    "execution_count": 43,
-   "id": "5c229613",
+   "id": "468e015c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50740,7 +50740,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "f72ede0c",
+   "id": "ec762989",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50750,7 +50750,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "a95a483a",
+   "id": "e202a779",
    "metadata": {},
    "outputs": [
     {
@@ -50782,7 +50782,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "5029b6f4",
+   "id": "b87d1c50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50792,7 +50792,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "3747ac5b",
+   "id": "bb60356e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50802,7 +50802,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "96ed6deb",
+   "id": "97ff2449",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50812,7 +50812,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "9238feb2",
+   "id": "1a69de33",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50822,7 +50822,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "0831ebbc",
+   "id": "95142dd9",
    "metadata": {},
    "outputs": [
     {
@@ -50883,7 +50883,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "4bf32798",
+   "id": "4186a917",
    "metadata": {},
    "outputs": [
     {
@@ -50951,7 +50951,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "58486cb3",
+   "id": "647f5f7e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50961,7 +50961,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "55c9cbeb",
+   "id": "8df30dab",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50971,7 +50971,7 @@
   {
    "cell_type": "code",
    "execution_count": 54,
-   "id": "a2cc15db",
+   "id": "6558b413",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50981,7 +50981,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "31577eae",
+   "id": "243dd3ce",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50994,7 +50994,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5bfab075",
+   "id": "4f057057",
    "metadata": {},
    "outputs": [
     {
@@ -51100,7 +51100,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "f601a382",
+   "id": "cc8b4421",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51110,7 +51110,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "c664c063",
+   "id": "47789435",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51120,7 +51120,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "69be39d7",
+   "id": "46c6d8dc",
    "metadata": {},
    "outputs": [
     {
@@ -51141,7 +51141,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c7597519",
+   "id": "9c5b3e0d",
    "metadata": {},
    "outputs": [
     {
@@ -51173,7 +51173,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "070345dc",
+   "id": "cdd8f19e",
    "metadata": {},
    "outputs": [
     {
@@ -51194,7 +51194,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "942e404d",
+   "id": "0a96700e",
    "metadata": {},
    "outputs": [
     {
@@ -51232,7 +51232,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "5d7fe5e2",
+   "id": "89672a69",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51242,7 +51242,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "807a4143",
+   "id": "1cf9decf",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51252,7 +51252,7 @@
   {
    "cell_type": "code",
    "execution_count": 65,
-   "id": "27f03851",
+   "id": "1ad1fe50",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51262,7 +51262,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "d3a34463",
+   "id": "972d94ef",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51272,7 +51272,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "c1b70894",
+   "id": "a58361fb",
    "metadata": {},
    "outputs": [
     {
@@ -51317,7 +51317,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "8a80c018",
+   "id": "eb40dc03",
    "metadata": {},
    "outputs": [
     {
@@ -51343,7 +51343,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "f0d3cf45",
+   "id": "01ffac34",
    "metadata": {},
    "outputs": [
     {
@@ -51519,7 +51519,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "ddb6c349",
+   "id": "e11ff1ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51529,7 +51529,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "164d2d66",
+   "id": "d302ca89",
    "metadata": {},
    "outputs": [
     {
@@ -51552,7 +51552,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "6513e829",
+   "id": "7564199f",
    "metadata": {},
    "outputs": [
     {
@@ -51584,7 +51584,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "766c3b93",
+   "id": "8be3de55",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51594,7 +51594,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "2387414d",
+   "id": "7441aec3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51606,7 +51606,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "f4029e34",
+   "id": "ec8ae3ad",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51616,7 +51616,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "5a913319",
+   "id": "98396ef5",
    "metadata": {},
    "outputs": [
     {
@@ -51652,7 +51652,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "e33c55a9",
+   "id": "8a077705",
    "metadata": {},
    "outputs": [
     {
@@ -51684,7 +51684,7 @@
   {
    "cell_type": "code",
    "execution_count": 78,
-   "id": "de5478e9",
+   "id": "79b532a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51694,7 +51694,7 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "a293bbaa",
+   "id": "88559926",
    "metadata": {},
    "outputs": [
     {
@@ -51737,7 +51737,7 @@
   {
    "cell_type": "code",
    "execution_count": 80,
-   "id": "171fedc2",
+   "id": "90afa408",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51747,7 +51747,7 @@
   {
    "cell_type": "code",
    "execution_count": 81,
-   "id": "70d03641",
+   "id": "4276d8a1",
    "metadata": {},
    "outputs": [
     {
@@ -51865,7 +51865,7 @@
   {
    "cell_type": "code",
    "execution_count": 82,
-   "id": "95170e24",
+   "id": "30007e13",
    "metadata": {},
    "outputs": [
     {
@@ -51996,7 +51996,7 @@
   {
    "cell_type": "code",
    "execution_count": 83,
-   "id": "61015398",
+   "id": "4e99eea8",
    "metadata": {},
    "outputs": [
     {
@@ -52070,7 +52070,7 @@
   {
    "cell_type": "code",
    "execution_count": 85,
-   "id": "579e11d6",
+   "id": "4bf059d5",
    "metadata": {},
    "outputs": [
     {
@@ -52103,7 +52103,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "7d34a215",
+   "id": "5253111c",
    "metadata": {},
    "outputs": [
     {
@@ -52136,7 +52136,7 @@
   {
    "cell_type": "code",
    "execution_count": 87,
-   "id": "66063deb",
+   "id": "8834e06a",
    "metadata": {},
    "outputs": [
     {
@@ -52169,7 +52169,7 @@
   {
    "cell_type": "code",
    "execution_count": 88,
-   "id": "236ecb0b",
+   "id": "88f4260a",
    "metadata": {},
    "outputs": [
     {
@@ -52202,7 +52202,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "ba34df53",
+   "id": "3c64bd83",
    "metadata": {},
    "outputs": [
     {
@@ -52235,7 +52235,7 @@
   {
    "cell_type": "code",
    "execution_count": 90,
-   "id": "761b398a",
+   "id": "ab8f331a",
    "metadata": {},
    "outputs": [
     {
@@ -52352,7 +52352,7 @@
   {
    "cell_type": "code",
    "execution_count": 91,
-   "id": "98006bba",
+   "id": "18308884",
    "metadata": {},
    "outputs": [
     {
@@ -52373,7 +52373,7 @@
   {
    "cell_type": "code",
    "execution_count": 92,
-   "id": "17f9c066",
+   "id": "196cf6bc",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52383,7 +52383,7 @@
   {
    "cell_type": "code",
    "execution_count": 93,
-   "id": "34298d0f",
+   "id": "c22aae86",
    "metadata": {},
    "outputs": [
     {
@@ -52846,7 +52846,7 @@
   {
    "cell_type": "code",
    "execution_count": 94,
-   "id": "7cfd997d",
+   "id": "4522700c",
    "metadata": {},
    "outputs": [
     {
@@ -52899,7 +52899,7 @@
   {
    "cell_type": "code",
    "execution_count": 95,
-   "id": "57bdb7ba",
+   "id": "c9043072",
    "metadata": {},
    "outputs": [
     {
@@ -52931,7 +52931,7 @@
   {
    "cell_type": "code",
    "execution_count": 96,
-   "id": "192702aa",
+   "id": "bef57387",
    "metadata": {},
    "outputs": [
     {
@@ -52970,7 +52970,7 @@
   {
    "cell_type": "code",
    "execution_count": 97,
-   "id": "70c38397",
+   "id": "ee48083c",
    "metadata": {},
    "outputs": [
     {
@@ -53101,7 +53101,7 @@
   {
    "cell_type": "code",
    "execution_count": 98,
-   "id": "076bc3ab",
+   "id": "8736c67e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53111,7 +53111,7 @@
   {
    "cell_type": "code",
    "execution_count": 99,
-   "id": "d5287272",
+   "id": "fab6893f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53125,7 +53125,7 @@
   {
    "cell_type": "code",
    "execution_count": 100,
-   "id": "dc670aa6",
+   "id": "e7edcd17",
    "metadata": {},
    "outputs": [
     {
@@ -53617,7 +53617,7 @@
   {
    "cell_type": "code",
    "execution_count": 101,
-   "id": "9572cce0",
+   "id": "fa7880c0",
    "metadata": {},
    "outputs": [
     {
@@ -53640,7 +53640,7 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "id": "4f3ec648",
+   "id": "f9c8ca0a",
    "metadata": {},
    "outputs": [
     {
@@ -53662,7 +53662,7 @@
   {
    "cell_type": "code",
    "execution_count": 103,
-   "id": "15be393b",
+   "id": "b747447a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53677,7 +53677,7 @@
   {
    "cell_type": "code",
    "execution_count": 104,
-   "id": "5b5f3c43",
+   "id": "703523a6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53701,8 +53701,61 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 105,
+   "id": "17813870",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 106,
+   "id": "27f242bd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "id": "68e37923",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts = ratings.groupby(['movieId','rating'], as_index=False).count() \\\n",
+    "                .rename({'userId':'count'}, axis=1) \\\n",
+    "                .pivot(index='movieId',columns='rating', values='count')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 108,
+   "id": "9b610c44",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rating_counts.columns = ['rating_' + str(col) for col in rating_counts.columns]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "f3fc7d95",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "movies_with_ratings_df = pd.merge(movies_df, rating_counts, left_on='kaggle_id', right_index=True, how='left')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "881c63d3",
+   "id": "5f073b8b",
    "metadata": {},
    "outputs": [],
    "source": []
